# src/auth/auth.controller.ts
@@ -1,0 +1,13 @@
+import { Controller, Post, Body } from '@nestjs/common';
+import { AuthService } from './auth.service';
+
+@Controller('auth')
+export class AuthController {
+    constructor(private authService: AuthService) { }
+
+    @Post('login')
+    async login(@Body() body: { email: string; password: string }) {
+        console.log(body)
+        return this.authService.login(body.email, body.password);
+    }
+}
